# raged

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  docker-compose.yml
.claude-plugin/: marketplace.json
.github/: skills
.github/agents/: refiner.agent.md
.github/workflows/: changelog-generator.yml  ci.yaml  pages.yml  publish-images.yaml
api/: AGENTS.md  Dockerfile  package-lock.json  package.json  verify-endpoints.sh  vitest.config.ts
api/migrations/: 001_initial.sql  002_add_payload_checksum.sql  003_add_raw_data.sql  004_switch_embeddings_to_1536.sql  005_add_document_summary_levels.sql  006_add_entity_name_lower_index.sql
api/src/: auth.ts  blob-store.ts  chunking.test.ts  chunking.ts  db.test.ts  db.ts  errors.ts  (+20 more)
chart/: Chart.yaml  values.yaml
cli/: AGENTS.md  Dockerfile  package-lock.json  package.json  tsconfig.json  vitest.config.ts
docs/: 00-vision.md  01-architecture.md  02-local-dev.md  03-cli.md  04-claude-skills.md  05-helm-remote.md  06-troubleshooting.md  07-indexing-in-cluster.md  08-contributing.md  09-api-reference.md  index.md
scripts/: create-release.sh  generate-changelog.sh
skill/: README.md  SKILL.md
worker/: Dockerfile  pyproject.toml  requirements-lint.txt  requirements.txt
worker/src/: api_client.py  config.py  db.py  graph.py  main.py  pipeline.py  tier2.py
worker/src/adapters/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
worker/src/schemas/: __init__.py  article.py  code.py  email.py  entities.py  image.py  meeting.py  pdf.py  slack.py  text.py
worker/tests/: test_adapters.py  test_api_client.py  test_config.py  test_db.py  test_graph.py  test_pipeline.py  test_schemas.py  test_tier2.py
(+114 files in other folders)
