[project]
name = "rag-stack-worker"
version = "0.1.0"
description = "Multi-agent memory hub worker for enrichment processing"
requires-python = ">=3.12,<3.13"
dependencies = [
    "redis~=5.3.1",
    "qdrant-client~=1.16.2",
    "neo4j~=5.28.3",
    "spacy~=3.8.11",
    "pytextrank~=3.3.0",
    "langdetect~=1.0.9",
    "anthropic~=0.79.0",
    "openai~=1.109.1",
    "httpx[http2]~=0.28.1",
    "pydantic~=2.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.0",
    "pytest-asyncio~=0.24",
    "ruff~=0.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
